cmake_minimum_required(VERSION 3.15)
project(zns_bdtest)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)
string(APPEND CMAKE_C_FLAGS "-D_GNU_SOURCE")

option(NOLOG "Disable logging" OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
IF (CMAKE_BUILD_TYPE STREQUAL Debug)
    ADD_DEFINITIONS(-DDEBUG)
ENDIF()

IF (NOLOG)
    ADD_DEFINITIONS(-DNOLOG)
ENDIF()

# subdir
add_subdirectory(src)
